# AQI-prediction-Flask

./: app.py  pyproject.toml  requirements.txt
