[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <youremail@example.com>"]
# Optional: license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "3.1.2"
gunicorn = "23.0.0"
click = "8.3.0"
Jinja2 = "3.1.6"
itsdangerous = "2.2.0"
MarkupSafe = "3.0.3"
Werkzeug = "3.1.3"
blinker = "1.9.0"
colorama = "0.4.6"
requests = "2.31.0"
certifi = "2025.10.5"
charset-normalizer = "3.4.3"
idna = "3.10"
urllib3 = "2.5.0"
numpy = "1.26.4"
pandas = "2.2.2"
python-dateutil = "2.9.0.post0"
pytz = "2025.2"
scikit-learn = "1.3.2"
scipy = "1.11.1"
joblib = "1.5.2"
threadpoolctl = "3.6.0"
packaging = "25.0"
six = "1.17.0"
tzdata = "2025.2"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
